<resources>
    <string name="app_name">CarLoanCalculator</string>
    <string name="please_insert">Please Insert:</string>
    <string name="car_price">Car Price:</string>
    <string name="down_payment_amount">Down Payment Amount:</string>
    <string name="loan_period_year">Loan Period (Year):</string>
    <string name="interest_rate">Interest Rate:</string>
    <string name="calculate">Calculate</string>
    <string name="monthly_repayment">Monthly Repayment:</string>
    <string name="interest">Interest:</string>
    <string name="car_loan">Car Loan:</string>
</resources>
